# lbc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  REFLECT.md  RULES.md  TASKS.md  TOFIX.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/control-plane/: Cargo.toml
crates/control-plane/migrations/: 20260510140000_initial_schema.sql  20260510150000_heartbeat.sql  20260511190000_heartbeat_bearer_secret.sql  20260511200000_hardware_components.sql
crates/control-plane/src/: config.rs  lib.rs  logging.rs  main.rs  shutdown.rs  signing.rs  storage.rs
crates/control-plane/src/http/: admin.rs  admin_auth.rs  error.rs  licenses.rs  meta.rs  mod.rs  openapi.rs
crates/control-plane/tests/: admin.rs  admin_auth.rs  licenses.rs
crates/control-plane/tests/common/: mod.rs
crates/edge/: Cargo.toml
crates/edge/migrations/: 20260510130000_initial_schema.sql  20260510130001_seed_default_branch.sql  20260510160000_device_webhook_secret.sql  20260511180000_user_login_rate_limit.sql
crates/edge/src/: activate.rs  admin.rs  cli.rs  config.rs  fingerprint.rs  heartbeat.rs  http.rs  lib.rs  license.rs  logging.rs  main.rs  shutdown.rs
crates/edge/src/actions/: ftp.rs  http.rs  mod.rs  modbus.rs  mqtt.rs  nx.rs  smtp.rs
crates/edge/src/auth/: cp_key.rs  mod.rs  password.rs  role.rs  token.rs
crates/edge/src/http/: auth.rs  devices.rs  error.rs  events.rs  exceptions.rs  extractors.rs  ingest.rs  meta.rs  mod.rs  openapi.rs  rules.rs
crates/edge/src/rules/: dispatch.rs  engine.rs  mod.rs  scheduler.rs
crates/edge/src/storage/: audit.rs  blobs.rs  mod.rs
crates/edge/tests/: actions.rs  activation.rs  api.rs  auth.rs  auth_rate_limit.rs  blobs.rs  http.rs  ingest.rs  rules.rs  storage.rs
crates/edge/tests/common/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: fingerprint.rs  lib.rs  license.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
