[workspace]
resolver = "2"
members = [
    "crates/edge",
    "crates/control-plane",
    "crates/shared",
    "crates/ui",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "Proprietary"
publish = false
repository = "https://github.com/hibari-tech/lbc"

[workspace.dependencies]
shared = { path = "crates/shared" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
