[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "lbc-control-plane"
path = "src/main.rs"

[dependencies]
shared.workspace = true
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
blake3 = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["pkcs8", "rand_core", "std"] }
figment = { version = "0.10", features = ["toml", "env"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = "5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
