[package]
name = "edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "lbc-edge"
path = "src/main.rs"

[dependencies]
shared.workspace = true
anyhow = "1"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
jsonwebtoken = { version = "9", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = "5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
