[package]
name = "edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "lbc-edge"
path = "src/main.rs"

[dependencies]
shared.workspace = true
anyhow = "1"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
gethostname = "1"
hmac = "0.12"
jsonwebtoken = { version = "9", default-features = false }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
mac_address = "1"
rumqttc = { version = "0.24", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rhai = { version = "1", default-features = false, features = ["std", "sync", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = "5"

[dev-dependencies]
control-plane = { path = "../control-plane" }
tempfile = "3"

[lints]
workspace = true
