[package]
name = "shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "pkcs8"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
